deployment/my-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-go-app-ingress
spec:
  rules:
    - host: example.com
      http:
        paths:
          - path: /goapp
            pathType: Prefix
            backend:
              service:
                name: my-go-app-service
                port:
                  number: 80
